Fix display of inputs on iOS

--- a/static/styles/all.sass
+++ b/static/styles/all.sass
@@ -299,7 +299,9 @@ ul
   margin-top: 1em
 
 .email .email-input, .email .submit-input
+  -webkit-appearance: none
   border: none
+  border-radius: 0
   font-size: 1em
   margin: 0
 
